<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/addIncome_btn"
            android:text="@string/add_income"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/addOutcome_btn"
            android:text="@string/add_outcome"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ListView
                android:id="@+id/income_lv"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ListView
                android:id="@+id/outcome_lv"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

            </ListView>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/total_income_tv"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/total_outcome_tv"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/balance"
        android:text="@string/balance"
        android:textSize="24sp"
        android:textAlignment="center"
        />


</LinearLayout>
